Add new method to RealJenkinsRule to start in FIPS mode
Signed-off-by: Olivier Lamy <olamy@apache.org>